Ajustes y refactorizacion de archivo

--- a/.gitignore
+++ b/.gitignore
@@ -80,4 +80,7 @@ fabric.properties
 # Sonarlint plugin
 .idea/sonarlint
 
+#Text cipher samples
+*.txt
+
 # End of https://www.gitignore.io/api/pycharm
